# panda-quant

./: pyproject.toml
llm-ideas/: ChatbotExample.ipynb  CosineTest.ipynb  Day2Day.ipynb  EmbeddingTest.ipynb  FXChatProcessor.py  FXChatSpeech.py  FXRisk.py  HWG2CallablePricer.ipynb  RiskAgent.ipynb
quant-ideas/: AMZN.csv  ARCHExample.ipynb  AutoencoderRates.ipynb  Bootstrap.ipynb  Connect4HumanVsAI.html  Duality.ipynb  FastBond.ipynb  FastPricerComplete_v2.ipynb  FastPricerComplete_v6.ipynb  FastPricerComplete_v7.ipynb  FastPricerComplete_v9.ipynb  FastRiskDemo.ipynb  GBM.html  GOOG.csv  GPRBarrier.ipynb  GaltonBoard.html  GiltRates.csv  GridWorld.ipynb  META.csv  MLPDemo.html  MSFT.csv  Policy.ipynb  QLCurve.ipynb  Rates.ipynb  SGDTest.ipynb  VasicekDemo.html  ^W5000.csv
quant-ideas/FastRisk/: Test.ipynb  base_pricer.py  black_scholes_pricer.py  custom_importer.py  demo_TFF_Full_Hybrid.py  demo_calibration.py  demo_compare.py  demo_dynamic.py  demo_full.py  demo_k_determination.py  demo_main.py  demo_strips.py  fast_bond_pricer.py  features_generator.py  g2_model.py  hybrid_var.md  mbs_pricer.py  model_registry.json  portfolio.py  prepayment_models.py  pricers.py  product_definitions.py  quantlib_bond_pricer.py  quantlib_custom_serializer.py  scenario_generator.py  tff_approximator.py  workflow_manager.py
quant-ideas/FastRisk/output/: instrument_definitions.json  model_registry.json
